Add a pronoun doc and fix love in places

--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -1127,14 +1127,14 @@ that contains an action. Both subjective and objective genitive forms fit and
 the meanings should not contract but instead complement each other.
 
 <HisyeoTabs>
-    <p>kon yûbik yê ôcôto&emsp;<em>"love of God"</em> <small>(lit. loving of God)</small></p>
+    <p>kon lîûbît yê ôcôto&emsp;<em>"love of God"</em> <small>(lit. loving of God)</small></p>
 </HisyeoTabs>
 
 You can clarify this genitive relationship by replacing the whole relation with
 a subordinate noun clause and <HisyeoWord is='xokôn'/> <HisyeoWord is='dîzel'/>:
 
 <HisyeoTabs>
-    <p>noyo ûn ôcôto yûbik xokôn dîzel.&emsp;<small>(lit. I and God love each other)</small></p>
+    <p>noyo ûn ôcôto lîûbît xokôn dîzel.&emsp;<small>(lit. I and God love each other)</small></p>
 </HisyeoTabs>
 
 :::
