--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -95,7 +95,7 @@ explicitly described or implied.
 
 <HisyeoTabs>
     <p>hôn fos noyo bît li bîlûs hoî xe kôntêsto til yokûntîk, û noyo bît cûdo fun dûî munî mût kûngîyo yôûlî.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
-    <p>noyo bît yûbik xe li nô monodo.&emsp;<em>I would love to come and visit.</em></p>
+    <p>noyo bît lîûbît xe li nô monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>kûu dêko bîek sûît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo mût nîmû bît sôlû xe sityo bi koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo mût gonîso fos nîo li sî cok bi ilik.&emsp;<em>I would imagine that they have already left.</em></p>
@@ -209,7 +209,7 @@ rectify the state of things.
     <p>noyo kûu li yôûlî mût nîmû.&emsp;<em>I ought to help you.</em></p>
     <p>nûs kûu li nô ze.&emsp;<em>Let's go!</em></p>
     <p>kûu gomî oksûn ulyô.&emsp;<em>Don't take that meat.</em></p>
-    <p>û yûbik noyo kûu li gô ofek nîmû lôtfen.&emsp;<em>May my love be with you.</em></p>
+    <p>û lîûbît noyo kûu li gô ofek nîmû lôtfen.&emsp;<em>May my love be with you.</em></p>
 </HisyeoTabs>
 
 
