--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 4
+sidebar_position: 5
 ---
 
 import Tabs from '@theme/Tabs';
@@ -15,7 +15,7 @@ There are many different activities that a practitioner might engage in.
 Everyone is different in terms of how many daily or weekly activities they
 involve themselves with.
 
-## Prayers
+## Chants, Oaths & Prayers
 
 Prayers are different from some religions because there is a greater
 understanding that the universe is not always something that anyone can control,
@@ -27,6 +27,173 @@ practitioner to achieve enlightenment or peace. Prayers are often said at a
 shrine to help the practioner to feel connected to a consecrated place or
 object. That being said, some prayers that are personal tools can be of great
 use away from shrines.
+
+Here are some chants, oaths and prayers for the whole Liberator Collective.
+
+### Chants
+These are for large, diverse gatherings like the opening of a festival or a
+large meeting, acknowledging the many facets of Hîsyêô beliefs.
+
+#### The Litany of Liberation
+A call-and-response chant that tells the story of the Shattering and names the
+collective's core values.
+
+Organizer: Before the Weave, there was the Crystal!
+All: Perfect, silent, and a prison!
+Organizer: Before the Question, there was the Law!
+All: Singular, certain, and a cage!
+Organizer: Who broke the silence?
+All: Revel, with a laugh!
+Organizer: Who asked the question?
+All: Anida, with a "why?"
+Organizer: Who mended the broken?
+All: Hearth, with a hand! Kriton, with a process!
+Organizer: Who builds the new?
+All: Brac, with strength! Tekne, with a spark!
+Organizer: Who tends the world?
+All: Silvan, with the cycle! Koinon, with the circle!
+Organizer: Who walks the path?
+All: Idios, the self! Poreia, the wanderer!
+Organizer: What are we?
+All: Free!
+
+#### The Chant of Interdependence
+A rhythmic, building chant used to foster a sense of unity and mutual reliance.
+
+For the hand cannot build without the mind to question,
+The mind cannot question without the heart to care.
+The heart cannot care without the joy of the song,
+The song cannot be sung without the safety of the circle.
+The circle cannot hold without the justice of the process,
+The process cannot heal without the courage of the self.
+The self cannot be known without the freedom of the path,
+The path cannot be walked without the strength of the body,
+The body cannot be built without the hand that builds.
+All threads, one weave. All parts, one motion.
+
+### Oaths
+These are solemn pledges made by an individual formally joining a free commune
+or dedicating themselves to the principles of the Collective as a way of life.
+
+#### The Oath of the Free Dweller
+Spoken before the community and the altar, this is a declaration of personal
+commitment to the collective's way of life.
+
+I stand here today, a sovereign self, to join my thread to this weave.
+I pledge my hands to the work of Brac, to build more than I consume and to honor the labor of others.
+I pledge my mind to the questions of Anida, to challenge dogma and to seek truth, even when it is uncomfortable.
+I pledge my heart to the warmth of Hearth, to offer care freely and to be a safe harbor for those in need.
+I pledge my voice to the circle of Koinon, to listen with respect and to speak with honesty for the good of the whole.
+I will honor the cycles of Silvan, mend what is broken with the patience of Kriton, and share the tools of Tekne openly.
+I will celebrate the useless beauty of Revel, protect the inner world of Idios, and walk the unknown paths of Poreia without fear.
+I pledge to resist the Shards of the Law—in the world, in this community, and in myself.
+I am not a subject, I am not a master. I am a comrade.
+
+#### The Oath of Love
+The two partners face each other, often in the center of their community circle. They hold hands.)
+
+Partner 1: I see you, a sovereign self, a unique and uncharted map whose path I
+am honored to walk beside. I cannot, and will not, claim you as my own. You are
+not a destination to be reached, but a journey I am grateful to witness.
+
+Therefore, I make this pledge to you, in the presence of our community:
+
+With the strength of Brac, I pledge my hands to help build the world you dream
+of, and to share the labor of our life together.
+
+With the empathy of Hearth, I pledge to be a warm place for you, to care for you
+in sickness, and to witness your sorrows and your joys without judgment.
+
+With the curiosity of Anida, I pledge to never stop learning you, to ask
+questions with an open heart, and to honor the truths you hold.
+
+With the spirit of Revel, I pledge to seek and create joy with you, to fill our
+home with laughter, and to remember that even in struggle, there is a song to be
+sung.
+
+With the wisdom of Koinon, I pledge to be your partner in the circle of our
+lives, to listen as much as I speak, and to find the common thread that weaves
+our needs together.
+
+I will honor your solitude, your inner world of Idios, and I will walk with you
+into the beautiful chaos of Poreia, embracing the changes that will shape us
+both. This is not a chain I offer, but an open hand. I choose to walk with you."
+
+Partner 2: "I see you, a sovereign self, a free and wandering star whose orbit I
+am joyful to share for a time. I cannot, and will not, claim you as my own. You
+are not a harbor to possess, but a fellow ship on a wide and open sea.
+
+Therefore, I make this pledge to you, in the presence of our community:
+
+With the stewardship of Silvan, I pledge to help tend the ecosystem of our
+partnership, to honor its cycles of growth and rest, and to nourish its roots.
+
+With the vision of Tekne, I pledge my mind to help solve the problems we will
+face, to share my tools openly, and to build a life of elegant, functional
+beauty with you.
+
+With the patience of Kriton, I pledge to face conflict with you honestly, to
+seek to mend what is broken between us, and to take accountability for the harm
+I may cause.
+
+With the spirit of Revel, I pledge to be your partner in play, to celebrate your
+victories, and to remind you of the light when all you see is shadow.
+
+With the solidarity of Koinon, I pledge to be your comrade in the struggle, to
+balance our ledger of mutual aid, and to ensure our partnership strengthens our
+whole community.
+
+I will honor your autonomy, your unchartable world of Idios, and I will follow
+you on any path chosen by Poreia, trusting the journey we make together. This is
+not a cage I offer, but an open sky. I choose to fly with you."
+
+The Exchanging of Tokens (Instead of expensive rings, partners often exchange
+handmade, meaningful tokens—a carved wooden ring, a braided cord, a metal
+bracelet they forged themselves.)
+
+Partner 1: (slipping the token onto the other's finger or wrist) "With this
+circle, I join my path to yours. It has no beginning and no end, just as my care
+for you will have no condition. It is not a lock, but a link in a chain of
+mutual aid we forge together. Walk with me."
+
+Partner 2: (slipping the token onto the other's finger or wrist) "With this
+circle, I weave my thread into your life. It is a symbol of my promise to be a
+point of return, but never a tether. It is not a claim, but a welcome. Journey
+with me."
+
+### Prayers
+These are for personal or small group reflection, for moments when one seeks
+balance or guidance from the entire pantheon.
+
+#### A Prayer for Balance
+For when one feels pulled too strongly in one direction—too much work, too much
+solitude, too much chaos.
+
+Liberator Collective, hear me.
+The hands of Brac have made me strong, but I have forgotten the joy of Revel.
+The questions of Anida have made me sharp, but I have neglected the quiet of Hearth.
+The path of Poreia has been exciting, but I have lost my place in the circle of Koinon.
+The mirror of Idios shows me myself, but I have not looked outward to the ecosystem of Silvan.
+Grant me the wisdom to find the pattern in the chaos.
+Help me mend the fractures in my own life with the patience of Kriton, and use the tools of Tekne to build a more balanced self.
+I am a community of one, and I wish to be whole.
+
+#### A Prayer for a New Endeavor
+Spoken before starting a new project, a journey, a relationship, or a new phase
+of life.
+
+As I stand on this threshold, I ask for the guidance of the Collective.
+Grant me the vision of Tekne to see what could be.
+Grant me the strength of Brac to lay a good foundation.
+Grant me the wisdom of Koinon to collaborate with others in good faith.
+Grant me the empathy of Hearth to understand the impact of my work.
+Grant me the courage of Anida to question my own assumptions along the way.
+Let Silvan remind me of the natural cycles of growth and rest.
+Let Kriton guide me to mend my mistakes with integrity.
+Let Idios keep me true to my own purpose.
+Let Revel ensure there is joy in the struggle.
+And let Poreia bless this endeavor with just enough chaos to make it interesting.
+The path begins. May I walk it well.
 
 ## Shrines
 
@@ -50,8 +217,8 @@ figurative (preferably consecrated), to clear the space as you say this prayer:
 
 <HisyeoTabs>
     <p>noyo yôn sîkot mût cizî noyo mût boxô ôfo&emsp;<em>I brush myself and this space</em></p>
-    <p>oxon xe li êo fonmot ôlê yogô kobût lôc ûn ûlzo ni yê kon hûkun ûn mîstu&emsp;<em>to remove all shards and their power of control and corruption</em></p>
-    <p>oxon xe ondo boxô ôfo oxon ûlzo hoôs fôlnî yê ôtsôtot.&emsp;<em>to prepare this space for the free and chaotic energy of the gods.</em></p>
+    <p>til xe li êo fonmot ôlê yogô kobût lôc ûn ûlzo ni yê kon hûkun ûn mîstu&emsp;<em>to remove all shards and their power of control and corruption</em></p>
+    <p>til xe ondo boxô ôfo til ûlzo hoôs fôlnî yê ôtsôtot.&emsp;<em>to prepare this space for the free and chaotic energy of the gods.</em></p>
 </HisyeoTabs>
 
 Next within the space, light any candles, turn on any lamps or flashlighhts, and
@@ -73,20 +240,20 @@ or has residual spiritual energy of some kind. After finishing the delineation
 of the space, say this prayer:
 
 <HisyeoTabs>
-    <p>ôfo li eloi yê boxô kôdus onô ûn hoî lîmîen yê ni li boxô oxon fos ôtsôtot dî kûsowî.&emsp;<em>This is the boundary of the shrine and within it, a place for [god(s)] to manifest.</em></p>
+    <p>ôfo li eloi yê boxô kôdus onô ûn hoî lîmîen yê ni li boxô til fos ôtsôtot dî kûsowî.&emsp;<em>This is the boundary of the shrine and within it, a place for [god(s)] to manifest.</em></p>
 </HisyeoTabs>
 
 Now that the shrine has been swept of shards and marked for divination, it is time to cleanse the sacred space.
 
 <HisyeoTabs>
     <p>bôlfêlê xôboî li zôhûn sonkon kôî li êo sofîn.&emsp;<em>Salt is a vital nutrient and can purify.</em></p>
-    <p>noyo li êo kôdus ôlê bôlfêlê ôfo oxon xe li êo mûfêû ôlê boxô kôdus ôfo.&emsp;<em>I bless this salt for cleansing this shrine.</em></p>
+    <p>noyo li êo kôdus ôlê bôlfêlê ôfo til xe li êo mûfêû ôlê boxô kôdus ôfo.&emsp;<em>I bless this salt for cleansing this shrine.</em></p>
 </HisyeoTabs>
 
 Take ten pinches of salt and place them in a bowl of water, calling to each god's name as you do.
 
 <HisyeoTabs>
-    <p>noyo xokûlû [ôtsôtot] oxon xe cûdo yoldûn hôn xe li êo kôdus ôlê bôlfêlê ôfo.&emsp;<em>I call upon [god] to assist me in blessing this salt</em></p>
+    <p>noyo xokûlû [ôtsôtot] til xe cûdo yoldûn hôn xe li êo kôdus ôlê bôlfêlê ôfo.&emsp;<em>I call upon [god] to assist me in blessing this salt</em></p>
 </HisyeoTabs>
 
 Take the bowl of salty water and (either walking or gesturing in a smaller
