--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -157,7 +157,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>oiyo. woyû cunyû ulyô li êo bukû ôlê mêloc noyo foxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
 <p>nîmû li zôtêstô tût bi îbûdû ko.&emsp;<em>Are you warm enough now?</em></p>
 <p>nîo tenkîn sî gongoxî hoî odigon mûun.&emsp;<em>They heard the warning too late.</em></p>
-<p>nûs li umo môfî yûbik fenûo nûs.&emsp;<em>We are a brave people, and love our country.</em></p>
+<p>nûs li umo môfî lîûbît fenûo nûs.&emsp;<em>We are a brave people, and love our country.</em></p>
 <p>môî mênyûu li sî gîk lêkin mênyûu Meli.&emsp;<em>All the children came except Mary.</em></p>
 <p>umo Zek ogolol zûngô mûlû yê îbûwê cûtî lunsol ni mût zomo xîmu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
 <p>niwos cômêl ôfo li sî totsi hoî tôxûtsi bûmî sêl hoî yoûtî mônbili xe sûn sinsî onô.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
@@ -214,7 +214,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>hôn fos nîmû li gîk bi hêlxun, kûu motsi hoî tîton kûncîen.&emsp;<em>If you come early, wait in the hall.</em></p>
 <p>noyo fuî sî siskin moskûl yê xonluk eswen et Ontônîô.&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
 <p>li umo cûtî Gunôn xe niwos bûmî sêl.&emsp;<em>Gnomes are little men who live under the ground.</em></p>
-<p>xokôn umo yûbik nîo nênko wêîlun xêntîl nîo.&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
+<p>xokôn umo lîûbît nîo nênko wêîlun xêntîl nîo.&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
 <p>kûu ogolol kûdu onô bînê noyo kôî li nô ogolol ôntôn wîk noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
 <p>noyo yosten sî wutun zîxîtû onô fos noyo nocîdo.&emsp;<em>I have found the ring I lost.</em></p>
 <p>kûu kontol ûn noyo ke kontol bi ôîtun.&emsp;<em>Play and I will sing.</em></p>
