--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -59,8 +59,8 @@ positional.
 | <HisyeoWord is='cihôû'/> | Succeeding / After | Used for things that come after the reference point in a line or sequence. |
 
 <HisyeoTabs>
-    <p>nîo li totsi hoî ilik noyo.&emsp;<em>He stands preceding me (in line).</em></p>
-    <p>nûs ke li gô hoî cihôû lono ôfo.&emsp;<em>We will be [there] after today.</em></p>
+    <p>nîo li totsi ilik noyo.&emsp;<em>He stands preceding me (in line).</em></p>
+    <p>nûs ke li gô cihôû lono ôfo.&emsp;<em>We will be [there] after today.</em></p>
 </HisyeoTabs>
 
 ## Additional Examples
