Update subtitles for language docs

--- a/docs/language/orthography.mdx
+++ b/docs/language/orthography.mdx
@@ -11,6 +11,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Orthography
 
+The scripts used to write the language.
+
 There are three writing systems that can be used with Hîsyêô: one that uses
 Latin encoding characters, one that uses Latin-extended encoding characters, and
 a heavily modified version of Kikakui. Here's an example sentence in Hîsyêô that
