--- a/docs/language/phonology.mdx
+++ b/docs/language/phonology.mdx
@@ -11,7 +11,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Phonology
 
-Docusaurus can manage multiple versions of your docs.
+How the sounds of the language are mapped to syllables.
 
 ## Phonemes
 
