--- a/docs/language/punctuation.mdx
+++ b/docs/language/punctuation.mdx
@@ -11,6 +11,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Punctuation
 
+The pauses of speech and how to write them.
+
 ## Comma
 Commas are used to end clauses.  In spoken Hîsyêô, this is the shortest pause
 used.
