--- a/docs/language/questions.mdx
+++ b/docs/language/questions.mdx
@@ -11,7 +11,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Questions
 
-The syntax and semantics of questions and question responses.
+The syntax & semantics of questions & responses.
 
 There are three types of questions that need a special answer: polar questions,
 propositive questions, and pro-form questions. Each one is answered slightly
