--- a/docs/language/sentences.mdx
+++ b/docs/language/sentences.mdx
@@ -11,7 +11,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Sentences
 
-The structure of morphemes, phrases and sentence constituents.
+The structure of morphemes, phrases & constituents.
 
 ## Morphosyntactics
 
