--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -11,6 +11,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Spatial Relations
 
+How to relate the position of our surroundings & objects.
+
 Hîsyêô does not use specific prepositions for concepts like "inside," "under,"
 or "behind." Instead, it uses a **Locative Nucleus Construction**.
 
