--- a/docs/language/word_types/_category_.json
+++ b/docs/language/word_types/_category_.json
@@ -2,6 +2,7 @@
   "label": "Word Types",
   "position": 2,
   "link": {
-    "type": "generated-index"
+    "type": "generated-index",
+    "description": "The different classes of words & their functions"
   }
 }
