Update the punctuation page to include some examples and show each script's glyphs

--- a/docs/language/punctuation.mdx
+++ b/docs/language/punctuation.mdx
@@ -13,45 +13,31 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 The pauses of speech and how to write them.
 
-## Comma
-Commas are used to end clauses.  In spoken Hîsyêô, this is the shortest pause
-used.
+In Hîsyêô, punctuation is not just for grammatical organization; it is a direct
+instruction for prosody (the rhythm and pauses of speech). When reading aloud,
+every mark corresponds to a specific length of silence or intonation change
 
-## Period
+## Sentence Terminators
+
+### Period
+
+| Latin | Abugida                                   | Syllabary                                   |
+|-------|-------------------------------------------|---------------------------------------------|
+| .     | <HisyeoText kind='abugida'>.</HisyeoText> | <HisyeoText kind='syllabary'>.</HisyeoText> |
+
 Periods are used to end sentences.  In spoken Hîsyêô, this is longer pause than
 a comma and a shorter pause than a semicolon.
 
-## Semicolon
-Semicolons are used to combine two independent sentences into one to signify
-that they have some relationship. In spoken Hîsyêô, this is only a slightly
-shorter pause than a period.
+### Question Marks
 
-## Colon
-Colons are used to indicate large lists.  In spoken Hîsyêô, this is a long pause
-and a slight intonation change to the word just prior to the colon.
+| Latin | Abugida                                     | Syllabary                                     |
+|-------|---------------------------------------------|-----------------------------------------------|
+| ¿ ?   | <HisyeoText kind='abugida'>?</HisyeoText>   | <HisyeoText kind='syllabary'>?</HisyeoText>   |
 
-## Em Dash
-Anytime you would use a comma or other punctuation to indicate a pause, use the
-em dash. Commas have a specific usage in Hîsyêô which is best preserved (even
-though the spoken—or rather, *un*spoken—effect is the same).  In spoken Hîsyêô,
-this either an abrupt pause which upsets the natural prosody of the speeech or
-it fits rhythmically in the pattern of speech as a rest.
-
-## Question Marks
-Question marks are placed surrounding a sentence that is a question. This isn't
-necessary for the sentence to be interpreted as a question but it indicates that
-the speech pattern is one of a rising question intonation.
-
-## Quotation Marks
-Quotation marks are used to surround direct speech. In spoken Hîsyêô, sometimes
-there is a short pause before and after to indicate a direct quote.
-
-## Proper Name Marks
-In the Latin script, a capital letter is used to indicate a proper name and it
-will always be directly after a word (the nucleus) or phrase that indicates what
-that name is for.  In spoken Hîsyêô, there is a slight pause and often an
-intonation change. If the nucleus is a single word, the stress can often be
-suppressed completely and shifted over to the proper name.
+In the latin script, question marks are placed surrounding a sentence that is a
+question. In the other scripts, there's no additional preceding mark. These
+marks isn't strictly necessary for the sentence to be interpreted as a question
+but it indicates that the speech pattern is one of a rising question intonation.
 
 ## Exclamation Point
 There is no exclamation point in Hîsyêô. If you want to indicate that a sentence
@@ -59,6 +45,102 @@ is aggressive or emotional, use the <HisyeoWord is='ze'/> sentence ending
 particle. If you want to indicate that a sentence is delivered with shock,
 surprise, dismay, or excitement, use the <HisyeoWord is='foxo'/> sentence ending
 particle.
+
+## Pauses & Separators
+
+### Comma
+
+| Latin | Abugida                                   | Syllabary                                   |
+|-------|-------------------------------------------|---------------------------------------------|
+| ,     | <HisyeoText kind='abugida'>,</HisyeoText> | <HisyeoText kind='syllabary'>,</HisyeoText> |
+
+Commas are used to end sub-clauses or for long lists.  In spoken Hîsyêô, this is
+the shortest pause used. They are strictly reserved for these grammatical
+purposes and cannot be used in the more free way that you might be used to from
+some native languages. If you think you need a comma for an emphatic pause, use
+the em dash.
+
+<HisyeoTabs>
+    <p>hôn fos nîmû li nô, kûu xokûlû noyo.&emsp;<em>If you go, call me.</em></p>
+</HisyeoTabs>
+
+## Em Dash
+
+| Latin | Abugida                                   | Syllabary                                   |
+|-------|-------------------------------------------|---------------------------------------------|
+| —     | <HisyeoText kind='abugida'>—</HisyeoText> | <HisyeoText kind='syllabary'>—</HisyeoText> |
+
+Anytime you would use a comma or other punctuation to indicate a pause that
+isn't strictly grammatically required, use the em dash. Commas have a specific
+usage in Hîsyêô which is best preserved (even though the spoken—or rather,
+*un*spoken—effect is the same).  In spoken Hîsyêô, the em dash is either an
+abrupt pause which upsets the natural prosody of the speeech or it fits
+rhythmically in the pattern of speech as a rest.
+
+<HisyeoTabs>
+    <p>noyo—bi hokîkî—li sî gô hoî ulyô.&emsp;<em>I—truthfully—was there.</em></p>
+</HisyeoTabs>
+
+
+### Semicolon
+
+| Latin | Abugida                                   | Syllabary                                   |
+|-------|-------------------------------------------|---------------------------------------------|
+| ;     | <HisyeoText kind='abugida'>;</HisyeoText> | <HisyeoText kind='syllabary'>;</HisyeoText> |
+
+Semicolons are used to combine two independent sentences into one to signify
+that they have some relationship. In spoken Hîsyêô, this is only a slightly
+shorter pause than a period. You may want to use the normally-elided causer/agent marker to help
+improve understanding of the independence of the clauses but it's not strictly necessary.
+
+<HisyeoTabs>
+    <p>nîo li bîcûon; (û) nîo li sî conzodo.&emsp;<em>He is tired; he went to sleep.</em></p>
+</HisyeoTabs>
+
+## Colon
+
+| Latin | Abugida                                   | Syllabary                                   |
+|-------|-------------------------------------------|---------------------------------------------|
+| :     | <HisyeoText kind='abugida'>:</HisyeoText> | <HisyeoText kind='syllabary'>:</HisyeoText> |
+
+Colons are used to indicate large lists.  In spoken Hîsyêô, this is a long pause
+and a slight intonation change to the word just prior to the colon.
+
+
+<HisyeoTabs>
+    <p>nûs buswen uyo ôfo: kûôxi, oksûn, ûn yoûtî xîmu.&emsp;<em>We need these things: fruit, meat, and some water.</em></p>
+</HisyeoTabs>
+
+
+## Quotation Marks
+
+| Latin | Abugida                                       | Syllabary                                       |
+|-------|-----------------------------------------------|-------------------------------------------------|
+| “ ”   | <HisyeoText kind='abugida'>« »</HisyeoText>   | <HisyeoText kind='syllabary'>« »</HisyeoText>   |
+
+Quotation marks are used to surround direct speech. In spoken Hîsyêô, sometimes
+there is a short pause before and after to indicate a direct quote.
+
+<HisyeoTabs>
+    <p>nîo kôto sî "bîolî" mût noyo.&emsp;<em>He said "hello" to me.</em></p>
+</HisyeoTabs>
+
+## Proper Name Marks
+
+| Latin | Abugida                                       | Syllabary                                       |
+|-------|-----------------------------------------------|-------------------------------------------------|
+| “ ”   | <HisyeoText kind='abugida'>‹ ›</HisyeoText>   | <HisyeoText kind='syllabary'>〈  〉</HisyeoText>   |
+
+In the Latin script, a capital letter is used to indicate a proper name and it
+will always be directly after a word (the nucleus) or phrase that indicates what
+that name is for.  In spoken Hîsyêô, there is a slight pause and often an
+intonation change. If the nucleus is a single word, the stress can often be
+suppressed completely and shifted over to the proper name.
+
+<HisyeoTabs>
+    <p>sinsî Xikogô&emsp;<em>City [of] Chicago</em></p>
+    <p>umo Zon&emsp;<em>Person [named] John</em></p>
+</HisyeoTabs>
 
 
 <HisyeoTooltip/>
