Fix for punctuation mistakes

--- a/docs/language/punctuation.mdx
+++ b/docs/language/punctuation.mdx
@@ -116,20 +116,20 @@ and a slight intonation change to the word just prior to the colon.
 
 | Latin | Abugida                                       | Syllabary                                       |
 |-------|-----------------------------------------------|-------------------------------------------------|
-| “ ”   | <HisyeoText kind='abugida'>« »</HisyeoText>   | <HisyeoText kind='syllabary'>« »</HisyeoText>   |
+| « »   | <HisyeoText kind='abugida'>« »</HisyeoText>   | <HisyeoText kind='syllabary'>« »</HisyeoText>   |
 
 Quotation marks are used to surround direct speech. In spoken Hîsyêô, sometimes
 there is a short pause before and after to indicate a direct quote.
 
 <HisyeoTabs>
-    <p>nîo kôto sî "bîolî" mût noyo.&emsp;<em>He said "hello" to me.</em></p>
+    <p>nîo kôto sî «bîolî» mût noyo.&emsp;<em>He said "hello" to me.</em></p>
 </HisyeoTabs>
 
 ## Proper Name Marks
 
-| Latin | Abugida                                       | Syllabary                                       |
-|-------|-----------------------------------------------|-------------------------------------------------|
-| “ ”   | <HisyeoText kind='abugida'>‹ ›</HisyeoText>   | <HisyeoText kind='syllabary'>〈  〉</HisyeoText>   |
+| Latin  | Abugida                                       | Syllabary                                       |
+|--------|-----------------------------------------------|-------------------------------------------------|
+| (None) | <HisyeoText kind='abugida'>‹ ›</HisyeoText>   | <HisyeoText kind='syllabary'>〈  〉</HisyeoText>   |
 
 In the Latin script, a capital letter is used to indicate a proper name and it
 will always be directly after a word (the nucleus) or phrase that indicates what
