Add missing tooltip

--- a/docs/language/spatial_relations.mdx
+++ b/docs/language/spatial_relations.mdx
@@ -25,9 +25,8 @@ nucleus, followed by the possessive connector <HisyeoWord is='yê'/> (of).
 
 ### Formula:
 
-
 <HisyeoTabs>
-    <p>hoî&emsp;<span><strong>+</strong>&emsp;[Position Word]&emsp;<strong>+</strong></span>&emsp;yê&emsp;<span><strong>+</strong>&emsp;[Reference Object]</span></p>
+    <p>hoî&emsp;<strong>+</strong><span>&emsp;[Position Word]&emsp;</span><strong>+</strong>&emsp;yê&emsp;<strong>+</strong><span>&emsp;[Reference Object]</span></p>
 </HisyeoTabs>
 
 <em>Literal translation: "At the [top/bottom/inside] of the object."</em>
@@ -72,3 +71,5 @@ positional.
     <p><strong>Wait inside the car.</strong>&emsp;kûu motsi hoî lîmîen yê oûtô.&emsp;<em>(Wait at the interior of the car.)</em></p>
     <p><strong>He stood in front of me.</strong>&emsp;nîo li totsi hoî fôhon yê noyo.&emsp;<em>(He stood at the front of me.)</em></p>
 </HisyeoTabs>
+
+<HisyeoTooltip/>
