update grammar term

--- a/docs/language/word_types/pronouns.mdx
+++ b/docs/language/word_types/pronouns.mdx
@@ -77,7 +77,7 @@ and "us" in English). The word <HisyeoWord is='nûs'/> is used for _exclusive_
 1st-person plural but by prepending <HisyeoWord is='môî'/> you can achieve an
 inclusive 1st-person plural. All other pronouns are technically number-neutral.
 Context usually implies number. However, to be explicit, you can modify the
-pronoun with a quantifier:
+pronoun with a determiner:
 
 <HisyeoTabs>
     <p>môî nîmû&emsp;<em>You all</em><small>&emsp;(lit: all of you)</small></p>
